--- a/src/executors/isopod.yml
+++ b/src/executors/isopod.yml
@@ -1,7 +1,7 @@
 description: >
   Isopod executor
 docker:
-  - image: 'europe-west1-docker.pkg.dev/ricardo-platform/docker/isopod:<<parameters.tag>>'
+  - image: 'us-east4-docker.pkg.dev/ricardo-platform/docker-cicd-virtual/isopod:<<parameters.tag>>'
     auth:
       username: _json_key
       password: ${GAR_APPLICATION_CREDENTIALS}
