--- a/src/jobs/build_push_image.yml
+++ b/src/jobs/build_push_image.yml
@@ -70,6 +70,9 @@ parameters:
     description: 'Steps that will run after build'
     type: steps
     default: [ ]
+  image_suffix:
+    type: string
+    default: ""
 
 steps:
   - checkout
@@ -105,4 +108,5 @@ steps:
   - build_push:
       work_dir: << parameters.path >>
       config: << parameters.isopod_config >>
+      image_suffix: << parameters.image_suffix >>
   - steps: << parameters.postbuild_steps >>
