--- a/src/jobs/js_publish_npm_module_job.yml
+++ b/src/jobs/js_publish_npm_module_job.yml
@@ -61,12 +61,24 @@ steps:
         - run:
             name: publish npm
             command: |
-              npm version $VERSION_VAR
-              npm publish
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "There will be no publish, semver was not detected"
+              else
+                echo "Publishing $VERSION_VAR version"
+                cd << parameters.build-folder >>
+                npm version $VERSION_VAR
+                npm publish
+              fi
         - run:
             name: git push version commit and tags
             command: |
-              git push --follow-tags --set-upstream origin `git branch --show-current`
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "no push, semver was not detected"
+              else
+                git push --follow-tags --set-upstream origin `git branch --show-current`
+              fi
 
 # Parameters
 
@@ -82,3 +94,7 @@ parameters:
     type: string
     description: Which tool should be used to publish. This is temporary param and will be removed once we get rid of np module from all our apps
     default: np
+  build-folder:
+    type: string
+    description: Folder where package will be build from. Remove this param once we have same build folder everywhere
+    default: build
