--- a/src/jobs/js_publish_npm_module_job.yml
+++ b/src/jobs/js_publish_npm_module_job.yml
@@ -59,17 +59,23 @@ steps:
               npm set registry https://npm.pkg.github.com/
               echo "//npm.pkg.github.com/:_authToken=$NPM_GAR_TOKEN" > ~/.npmrc
         - run:
-            name: publish npm & git push
+            name: publish npm
             command: |
               if [ -z "$VERSION_VAR" ]
               then
                 echo "There will be no publish, semver was not detected"
               else
                 echo "Publishing $VERSION_VAR version"
-                cd << parameters.build-folder >>
                 npm version $VERSION_VAR
                 npm publish
-                cp package.json ../ && cd ..
+              fi
+        - run:
+            name: git push version commit and tags
+            command: |
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "no push, semver was not detected"
+              else
                 git push --follow-tags --set-upstream origin `git branch --show-current`
               fi
 
@@ -87,7 +93,3 @@ parameters:
     type: string
     description: Which tool should be used to publish. This is temporary param and will be removed once we get rid of np module from all our apps
     default: np
-  build-folder:
-    type: string
-    description: Folder where package will be build from. Remove this param once we have same build folder everywhere
-    default: build
