[semver:minor] npm publish without np module (#83)
* npm publish without np module

* add conditioning

* publish from build folder

* keep it simple

* rename context variable

* rename context var

* use enum + add some comments

--- a/src/jobs/js_publish_npm_module_job.yml
+++ b/src/jobs/js_publish_npm_module_job.yml
@@ -29,16 +29,56 @@ steps:
           echo "Last commit: $lastCommitTitle"
           echo "New '$version' version will be published..."
         fi
-  - run:
-      name: Publish version
-      command: |
-        if [ -z "$VERSION_VAR" ]
-        then
-          echo "There will be no publish, semver was not detected"
-        else
-          echo "Publishing $VERSION_VAR version"
-          yarn np $VERSION_VAR --yolo --contents=build --no-release-draft
-        fi
+  - when:
+      condition:
+        equal: [ np, << parameters.publish-with >> ]
+      steps:
+        - run:
+            name: Publish version
+            command: |
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "There will be no publish, semver was not detected"
+              else
+                echo "Publishing $VERSION_VAR version"
+                yarn np $VERSION_VAR --yolo --contents=build --no-release-draft
+              fi
+  - when:
+      condition:
+        not:
+          equal: [ np, << parameters.publish-with >> ]
+      steps:
+        - run:
+            name: Configure Git user.name and user.email based on last commit
+            command: |
+              git config --global user.name `git log -1 --pretty=format:'%an'`
+              git config --global user.email `git log -1 --pretty=format:'%ae'`
+        - run:
+            name: Github Registry authentication
+            # NPM_GHP_TOKEN was generated for ricardo-saas user
+            command: |
+              npm set registry https://npm.pkg.github.com/
+              echo "//npm.pkg.github.com/:_authToken=$NPM_GHP_TOKEN" > ~/.npmrc
+        - run:
+            name: publish npm
+            command: |
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "There will be no publish, semver was not detected"
+              else
+                echo "Publishing $VERSION_VAR version"
+                npm version $VERSION_VAR
+                npm publish
+              fi
+        - run:
+            name: git push version commit and tags
+            command: |
+              if [ -z "$VERSION_VAR" ]
+              then
+                echo "no push, semver was not detected"
+              else
+                git push --follow-tags --set-upstream origin `git branch --show-current`
+              fi
 
 # Parameters
 
@@ -48,5 +88,10 @@ parameters:
     type: string
   before-publish:
     type: steps
-    description: Steps to run before publish
+    description: Steps to run before publish. Should be removed once all our apps will be migrated to yarn-3.
     default: []
+  publish-with:
+    type: enum
+    enum: ['np', 'custom']
+    default: np
+    description: Which tool should be used to publish. This is temporary param and will be removed once we get rid of np module from all our apps
