show command that is executed

--- a/src/jobs/codeql.yml
+++ b/src/jobs/codeql.yml
@@ -59,6 +59,8 @@ steps:
           cmd+=(--codescanning-config ~/.codeql.conf)
         fi
 
+        echo $cmd
+
         "${cmd[@]}"
   - run:
       name: Analyzing CodeQL database
