--- a/src/jobs/codeql.yml
+++ b/src/jobs/codeql.yml
@@ -41,41 +41,41 @@ steps:
       name: Creating CodeQL databases to analyze
       working_directory: ~/
       command: |
-        cmd=("codeql database create << parameters.language >>-codeql-db")
+        cmd=( codeql database create << parameters.language >>-codeql-db )
 
-        cmd+=("--language << parameters.language >>")
-        cmd+=("--source-root ~/project")
-        cmd+=("--no-run-unnecessary-builds")
+        cmd+=( --language << parameters.language >> )
+        cmd+=( --source-root ~/project )
+        cmd+=( --no-run-unnecessary-builds )
 
         if [[ ! -z "<< parameters.build-command >>" ]]; then
-          cmd+=("--command '<< parameters.build-command >>'")
+          cmd+=( --command '<< parameters.build-command >>' )
         fi
 
         if [[ ! -z "<< parameters.config-file >>" ]]; then
-          cmd+=("--codescanning-config 'project/<< parameters.config-file >>'")
+          cmd+=( --codescanning-config 'project/<< parameters.config-file >>' )
         else
           # Use default codeql config otherwise
           wget -O ~/.codeql.conf https://raw.githubusercontent.com/ricardo-ch/ricardo-orbs/codeql-improvements/src/templates/codeql/codeql.conf
-          cmd+=("--codescanning-config ~/.codeql.conf")
+          cmd+=( --codescanning-config ~/.codeql.conf )
         fi
 
-        echo "$cmd"
+        echo "${cmd[@]}"
 
         "${cmd[@]}"
   - run:
       name: Analyzing CodeQL database
       working_directory: ~/
       command: |
-        cmd=("codeql database analyze << parameters.language >>-codeql-db")
+        cmd=( codeql database analyze << parameters.language >>-codeql-db )
 
         if [[ -z "<< parameters.config-file >>" ]]; then
-          cmd+=("<< parameters.language >>-security-and-quality.qls")
+          cmd+=( << parameters.language >>-security-and-quality.qls )
         fi
 
-        cmd+=("--format sarif-latest")
-        cmd+=("--output=<< parameters.language >>-codeql-report.sarif")
+        cmd+=( --format sarif-latest )
+        cmd+=( --output=<< parameters.language >>-codeql-report.sarif )
 
-        echo "$cmd"
+        echo "${cmd[@]}"
 
         "${cmd[@]}"
   - run:
