--- a/src/templates/codeql/codeql.conf
+++ b/src/templates/codeql/codeql.conf
@@ -1,5 +1,8 @@
 name: "CodeQL config"
 
+queries:
+  - uses: security-and-quality
+
 query-filters:
 
 # Exclude all low-severity security alerts.
@@ -7,7 +10,7 @@ query-filters:
     security-severity: /^[0-6]\./   # security-severity < 7.
 
 # Exclude all Warnings and Notes (keep in mind that the following directive will exclude all alerts carrying Warning or Note designation;
-# this could cause certain important alerts to get excluded if they are designated as high-severity security alerts at the same time).
+#   this could cause certain important alerts to get excluded if they are designated as high-severity security alerts at the same time).
 - exclude:
     problem.severity:
       - recommendation
