--- a/src/jobs/codeql.yml
+++ b/src/jobs/codeql.yml
@@ -20,8 +20,8 @@ parameters:
     description: 'Use to specify the build command or script that invokes the build process for the codebase. If absent, tries to automatically build. Not needed for Python and JavaScript/TypeScript analysis'
     type: string
     default: ''
-  analize_params:
-    description: 'Additional parameters for the codeql database analize command. For more info see https://docs.github.com/en/code-security/codeql-cli/codeql-cli-manual/database-analyze'
+  analyze_params:
+    description: 'Additional parameters for the codeql database analyze command. For more info see https://docs.github.com/en/code-security/codeql-cli/codeql-cli-manual/database-analyze'
     type: string
     default: ''
 
@@ -75,8 +75,8 @@ steps:
         cmd+=( --format sarif-latest )
         cmd+=( --output=<< parameters.language >>-codeql-report.sarif )
 
-        if [[ ! -z "<< parameters.analize_params >>" ]]; then
-          cmd+=( << parameters.analize_params >> )
+        if [[ ! -z "<< parameters.analyze_params >>" ]]; then
+          cmd+=( << parameters.analyze_params >> )
         fi
 
         echo "${cmd[@]}"
