--- a/src/commands/docker_fetch_dockerfile.yml
+++ b/src/commands/docker_fetch_dockerfile.yml
@@ -5,6 +5,10 @@ parameters:
   work_dir:
     type: string
     default: .
+  repository_version:
+    description: 'The version of the ricardo-orbs from which to get the Dockerfiles, it can be a tag or a branch.'
+    type: string
+    default: 'main'
   docker_template:
     description: 'Get the Dockerfile from a template, normally for a given language/version.'
     type: enum
@@ -16,12 +20,13 @@ steps:
       name: Ensure or fetch Dockerfile
       working_directory: << parameters.work_dir >>
       environment:
+        REPOSITORY_ROOT: https://raw.githubusercontent.com/ricardo-ch/ricardo-orbs/<< parameters.repository_version >>
         DOCKER_TEMPLATE: << parameters.docker_template >>
       command: |
         if [[ -f "./Dockerfile" ]]; then
           echo "Dockerfile already exists, skipping"
         elif [[ "$DOCKER_TEMPLATE" != "none" ]]; then
-          TEMPLATE_URL="https://raw.githubusercontent.com/ricardo-ch/ricardo-orbs/main/src/templates/docker/$DOCKER_TEMPLATE/Dockerfile"
+          TEMPLATE_URL="$REPOSITORY_ROOT/src/templates/docker/$DOCKER_TEMPLATE/Dockerfile"
           echo "Fetching Dockerfile for $DOCKER_TEMPLATE from $TEMPLATE_URL ..."
           wget -O ./Dockerfile "$TEMPLATE_URL"
         else
