use alpine image

--- a/src/jobs/js_push_build_to_bucket_job.yml
+++ b/src/jobs/js_push_build_to_bucket_job.yml
@@ -3,7 +3,7 @@ description: >
   Authentication is needed for creating/deleting storage objects.
 
 docker:
-  - image: gcr.io/google.com/cloudsdktool/google-cloud-cli:latest
+  - image: gcr.io/google.com/cloudsdktool/google-cloud-cli:alpine
 
 steps:
   - attach_workspace:
