--- a/src/jobs/maven_assert_snapshot_version.yml
+++ b/src/jobs/maven_assert_snapshot_version.yml
@@ -16,6 +16,7 @@ executor: << parameters.executor >>
 
 steps:
   - checkout
+  - maven_auth
   - maven_assert_expression:
       expression: 'project.version'
       pattern: '^.*-SNAPSHOT$'
