--- a/src/jobs/js_build_job.yml
+++ b/src/jobs/js_build_job.yml
@@ -3,7 +3,35 @@ description: >
 
 # Executor
 
-executor: js
+executor: << parameters.e >>
+
+# Parameters
+
+parameters:
+  app_type:
+    default: nextjs
+    enum: ["legacy", "nextjs"]
+    type: enum
+  build_env:
+    default: beta
+    enum: ["beta", "prod"]
+    type: enum
+  e:
+    default: js_16
+    type: executor
+  require_env_cleanup:
+    default: true
+    description: some apps doesn't have .env file, e.g. selling-ui
+    type: boolean
+  resource_class:
+    default: "large"
+    enum:
+      ["small", "medium", "medium+", "large", "xlarge", "2xlarge", "2xlarge+"]
+    type: enum
+
+# generic CircleCI params
+
+resource_class: << parameters.resource_class >>
 
 # Execution
 
@@ -13,46 +41,23 @@ steps:
       at: .
   - when:
       condition:
-        equal: [ true, << parameters.require_env_cleanup >> ]
+        equal: [true, << parameters.require_env_cleanup >>]
       steps:
         # to be sure that local env is not used in production
         - run:
-            name: Delete .env
             command: rm .env
+            name: Delete .env
   - when:
       condition:
-        equal: [ nextjs, << parameters.app_type >> ]
+        equal: [nextjs, << parameters.app_type >>]
       steps:
         - run:
-            name: Generate build env
             # expose the right env variables (beta or prod) to the builder
             command: |
               APP_ENV=<< parameters.build_env >> yarn run generate:build-env
+            name: Generate build env
   - run:
-      name: Build the application
       command: APP_ENV=<< parameters.build_env >> yarn ci:build
+      name: Build the application
   - js_save_build_outputs:
       app_type: << parameters.app_type >>
-
-# generic CircleCI params
-
-resource_class: << parameters.resource_class >>
-
-# Parameters
-
-parameters:
-  app_type:
-    type: enum
-    enum: [ 'legacy', 'nextjs' ]
-    default: nextjs
-  build_env:
-    type: enum
-    enum: ['beta', 'prod']
-    default: beta
-  resource_class:
-    type: string
-    default: large
-  require_env_cleanup:
-    description: some apps doesn't have .env file, e.g. selling-ui
-    type: boolean
-    default: true
