--- a/src/jobs/js_jest_runner_job.yml
+++ b/src/jobs/js_jest_runner_job.yml
@@ -2,7 +2,39 @@ description: Runs jest tests with CircleCI parallelism
 
 # Executor
 
-executor: js
+executor: << parameters.e >>
+
+# Parallelism
+
+parallelism: << parameters.parallelism >>
+
+# Parameters
+
+parameters:
+  e:
+    default: js_16
+    type: executor
+  # define which files should be included for testing
+  globPattern:
+    type: string
+  jest_options:
+    default: ""
+    type: string
+  # how many nodes will run in parallel
+  parallelism:
+    default: 4
+    type: integer
+  resource_class:
+    default: "medium+"
+    enum:
+      ["small", "medium", "medium+", "large", "xlarge", "2xlarge", "2xlarge+"]
+    type: enum
+  script:
+    type: string
+
+# Generic CircleCI params
+
+resource_class: << parameters.resource_class >>
 
 # Execution
 
@@ -11,7 +43,6 @@ steps:
   - attach_workspace:
       at: .
   - run:
-      name: Running tests
       # equally spread tests with a given split_by strategy
       command: |
         shopt -s globstar # This is to make sure that ** is understood as pattern when globbing, e.g. /src/**/*.test.ts
@@ -19,35 +50,12 @@ steps:
         yarn ts-node --skipProject --transpileOnly ./testing/ci.displayTestList.ts
         yarn << parameters.script >> --findRelatedTests $(cat testing/tmp-test-list) --ci --logHeapUsage --reporters=default --reporters=jest-junit << parameters.jest_options >>
       environment:
+        JEST_JUNIT_ADD_FILE_ATTRIBUTE: "true"
         JEST_JUNIT_OUTPUT_DIR: ./reports/junit
-        JEST_JUNIT_ADD_FILE_ATTRIBUTE: 'true'
         TESTING_LIBRARY_ASYNC_UTIL_TIMEOUT: 5000
+      name: Running tests
   # storing test results is needed for circleci to compare them between runs and choose the best split
   # in circleci UI it results with TESTS tab being filled with results
   # for debugging use circleci's store_artifacts command, in circleci UI you will see the content of xml file
   - store_test_results:
       path: ./reports/junit
-
-# generic CircleCI params
-
-resource_class: << parameters.resource_class >>
-parallelism: << parameters.parallelism >>
-
-# Parameters
-
-parameters:
-  resource_class:
-    type: string
-    default: medium+
-  script:
-    type: string
-  # define which files should be included for testing
-  globPattern:
-    type: string
-  # how many nodes will run in parallel
-  parallelism:
-    type: integer
-    default: 4
-  jest_options:
-    type: string
-    default: ''
