--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -74,7 +74,7 @@ usage:
             env: 'prod'
             slack_notify_success: true
             slack_notify_failure: true
-            # FIXME: replace value with your actual main/master branch name; 'master' is default and is not needed for the slack webhook configuration to work
+            # FIXME: replace value with your actual main/master branch name; 'master' and 'main' are both default values are not needed for the slack webhook configuration to work
             #slack_ok_branches: 'main'
             #slack_fail_branches: 'main'
             filters:
