--- a/src/executors/js.yml
+++ b/src/executors/js.yml
@@ -7,7 +7,7 @@ docker:
       password: <<parameters.password>>
 parameters:
   node-version:
-    default: 16.15.1
+    default: lts
     description: Node version
     type: string
   username:
