--- a/src/commands/docker_build_push.yml
+++ b/src/commands/docker_build_push.yml
@@ -15,10 +15,8 @@ steps:
   - run:
       name: 'docker tag'
       command: |
-        [[ ${JFROG_ENABLED} == "true" ]] && docker tag << parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1} ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
-        [[ ${GAR_ENABLED} == "true" ]] && docker tag << parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1} europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+        docker tag << parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1} europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
   - run:
       name: 'docker push'
       command: |
-        [[ ${JFROG_ENABLED} == "true" ]] && docker push ric-docker.jfrog.io/ricardo-ch/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
-        [[ ${GAR_ENABLED} == "true" ]] && docker push europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
+        docker push europe-west1-docker.pkg.dev/ricardo-platform/docker/<< parameters.image_name >>:${CIRCLE_BRANCH}-${CIRCLE_SHA1}
