--- a/src/jobs/docker_build_push.yml
+++ b/src/jobs/docker_build_push.yml
@@ -5,8 +5,8 @@ description: >
 executor:
   name: isopod
   tag: $ISOPOD_VERSION
-  username: <<parameters.private_hub_username>>
-  password: <<parameters.private_hub_password>>
+  username: <<parameters.gar_username>>
+  password: <<parameters.gar_password>>
 
 parameters:
   image_name:
@@ -22,15 +22,6 @@ parameters:
   docker_hub_password:
     type: string
     default: $DOCKER_HUB_PASSWORD
-  private_hub_username:
-    type: string
-    default: $DOCKER_JFROG_USERNAME
-  private_hub_password:
-    type: string
-    default: $DOCKER_JFROG_PASSWORD
-  private_hub_url:
-    type: string
-    default: $DOCKER_JFROG_REGISTRY_URL
   gar_username:
     type: string
     default: $DOCKER_GAR_USERNAME
@@ -57,10 +48,6 @@ steps:
   - login_docker_registry:
       username: <<parameters.docker_hub_username>>
       password: <<parameters.docker_hub_password>>
-  - login_docker_registry:
-      url: <<parameters.private_hub_url>>
-      username: <<parameters.private_hub_username>>
-      password: <<parameters.private_hub_password>>
   - login_docker_registry:
       url: <<parameters.gar_url>>
       username: <<parameters.gar_username>>
