--- a/src/jobs/js_publish_npm_module_job.yml
+++ b/src/jobs/js_publish_npm_module_job.yml
@@ -78,6 +78,8 @@ steps:
                 # we will publish from ./build folder
                 cd build
 
+                cat package.json
+
                 npm publish
               fi
         - run:
