--- a/src/jobs/js_yarn_runner_job.yml
+++ b/src/jobs/js_yarn_runner_job.yml
@@ -16,11 +16,22 @@ steps:
   - when:
       condition: << parameters.reports_path >>
       steps:
-        - run:
-            name: Running tests
-            command: yarn << parameters.script >>
-            environment:
-              JEST_JUNIT_OUTPUT_DIR: << parameters.reports_path >>
+        - when:
+            condition: << parameters.monorepo >>
+            steps:
+              - run:
+                  name: Running tests
+                  command: cd << parameters.monorepo >> && yarn << parameters.script >>
+                  environment:
+                    JEST_JUNIT_OUTPUT_DIR: << parameters.reports_path >>
+        - unless:
+            condition: << parameters.reports_path >>
+            steps:
+              - run:
+                  name: Running tests
+                  command: yarn << parameters.script >>
+                  environment:
+                    JEST_JUNIT_OUTPUT_DIR: << parameters.reports_path >>
         - store_test_results:
             path: << parameters.reports_path >>
         - store_artifacts:
@@ -51,3 +62,6 @@ parameters:
     default: lts
     description: Node version
     type: string
+  monorepo:
+    type: string
+    default: ''
